src/components/bs5/header/header.scss
@use "../../../css/mixins";
@use "../../../css/variables/animation";
@import "./header-variables";

// Play nice with navbar header.
:root {
  --qld-header-preheader-height: 52px;

  @include media-breakpoint-up(md) {
    --qld-header-preheader-height: 72px;
  }

  @include media-breakpoint-up(lg) {
    --qld-header-preheader-height: 36px;
  }
}

.qld-header {
  font-size: 1rem;

  @include media-breakpoint-up(sm) {
    font-size: 1.25rem;
  }

  &-pre-header {
    @extend %preheader-variables;
    //
    display: flex;
    align-items: center;
    font-size: 0.875rem; // set here so whitespace doesn't add extra height.
    box-shadow:
      0 1px 2px rgba(0, 0, 0, 0.2),
      0 1px 3px 1px rgba(0, 0, 0, 0.1);
    position: relative;
    z-index: 2;
    height: var(--qld-header-preheader-height);

    .qld-header-mobile-controls {
      display: flex;
      position: absolute;
      right: 0;
      top: 0;

      @include media-breakpoint-up(lg) {
        display: none;
      }
    }

    .qld-header-mobile-button {
      align-items: center;
      appearance: none;
      background-color: var(--#{$prefix}header-mobile-button-bg);
      border: 0;
      border-left: 1px solid var(--qld-border-color);
      color: var(--qld-link-color);
      cursor: pointer;
      display: flex;
      flex-direction: column;
      justify-content: center;
      height: var(--qld-header-preheader-height);
      width: var(--qld-header-preheader-height);
      font-size: 0.625rem;
      line-height: 1.25;
      padding: 0;
      text-decoration: underline solid transparent 0px;
      text-underline-offset: 0.3em;

      transition: {
        property:
          color, background-color, outline, outline-offset, text-decoration;
        duration: animation.$duration-fast;
        timing-function: animation.$timing-function;
      }

      &:hover {
        background-color: var(--#{$prefix}header-mobile-button-bg-hover);
        text-decoration: underline solid currentColor 0.5px;
        --qld-icon-color: var(--qld-action-icon-hover-color);
      }

      @include mixins.focusable($offsetOutline: false);

      &:before {
        content: "";
        margin-bottom: 0.25rem;
        @include mixins.make-icon();
      }

      &.is-search-toggle {
        &,
        &.is-closed {
          &::before {
            @include mixins.make-icon($name: "search", $include-base: false);
          }
        }
        &.is-open::before {
          @include mixins.make-icon($name: "close", $include-base: false);
        }
      }

      &.is-menu-toggle::before {
        @include mixins.make-icon($name: "menu", $include-base: false);
      }

      @include media-breakpoint-up(md) {
        font-size: 0.875rem;
        line-height: 1.14;
        --icon-size: 2rem;
      }

      @include media-breakpoint-up(lg) {
        display: none;
      }
    }
  }

  &-link {
    @include mixins.make-link();
    font-size: 0.875rem;
    line-height: 1;

    &,
    &:visited {
      text-decoration: underline solid transparent 0px;

      &:hover {
        text-decoration-color: currentColor;
      }
    }

    &:disabled,
    a[disabled] {
      text-decoration: none;
    }

    &.has-no-underline {
      &:focus,
      &:hover {
        text-decoration: none;
      }
    }
  }

  &-link-icon {
    margin-right: 0.5rem;
  }

  &-logo {
    display: block;
    width: auto;
    transition: {
      property: filter, color, outline, outline-offset;
      duration: animation.$duration-fast;
      timing-function: animation.$timing-function;
    }
    color: var(--#{$prefix}header-logo-color);

    a:hover & {
      color: var(--#{$prefix}header-logo-color-hover);
      filter: drop-shadow(0 2px 5px rgba(0, 0, 0, 0.08))
        drop-shadow(0 13px 20px rgba(0, 0, 0, 0.08));
    }

    .qld-header-pre-header & {
      height: 1.75rem;

      @include media-breakpoint-up(md) {
        height: 2.5rem;
      }

      @include media-breakpoint-up(lg) {
        display: none;
      }
    }
  }

  .dropdown {
    line-height: 1.5;
    display: flex;
  }

  .dropdown-toggle {
    padding-inline: 0.5rem;
    display: flex;
    align-items: center;
    height: var(--qld-header-preheader-height);
    background-color: var(--dropdown-bg);

    &:focus {
      outline-offset: -2px;
      z-index: 1;
    }

    &::after {
      content: "";
      @include mixins.make-icon($name: "chevron-down", $size: "xs");
      margin-left: 0.5rem;
      transition: transform 0.2s;
    }

    &.show {
      background-color: var(--dropdown-bg-active);
      &::after {
        transform: rotate(-180deg);
      }
    }
  }

  .dropdown-menu {
    // Bootstrap defined custom properties
    --#{$prefix}dropdown-link-hover-bg: transparent;
    --#{$prefix}dropdown-link-active-bg: transparent;
    //
    width: 20.25rem;
    min-height: 1rem;
    padding: 1rem 2rem 1rem;
    border-radius: 0 0 0.75rem 0.75rem;
    border: 0;
    background-color: var(--dropdown-menu-bg);
    box-shadow:
      0 1px 2px rgba(0, 0, 0, 0.2),
      0 1px 3px 1px rgba(0, 0, 0, 0.1);
    transform: translate(0px, var(--qld-header-preheader-height)) !important;

    hr {
      margin: 1.5rem 0;
      color: var(--qld-border-color);
      border-color: var(--qld-border-color);
      opacity: 1;
    }

    p {
      font-size: 0.875rem;
      line-height: 1.5;
    }

    a.btn-primary {
      margin: 1.25rem 0 0.5rem 0;
      text-decoration-color: inherit;
      text-decoration-thickness: inherit;
    }
  }

  ul.dropdown-menu.show:has(> li) {
    padding-bottom: 1.25rem;
  }

  .dropdown-item {
    position: relative;
    border-bottom: solid 1px var(--qld-border-color);
    padding: 1rem 1.75rem 1rem 0;
    line-height: 1.5;
    white-space: normal; // allow text to wrap

    &:hover {
      color: var(--qld-link-visited-color);
    }

    &::after {
      content: "";
      @include mixins.make-icon($name: "arrow-right", $size: "md");
      position: absolute;
      right: 0;
      top: 50%;
      transform: translateY(-50%);
    }

    span,
    svg {
      vertical-align: middle;
    }
  }

  &-dropdown-icon {
    vertical-align: middle;
    margin-left: 0.5rem;
    height: 1rem;
    width: 1rem;
  }

  &-main {
    @extend %header-main-variables;
    position: relative;
    border-bottom: 0.25rem solid var(--#{$prefix}header-border-color);

    @include media-breakpoint-up("lg") {
      border-bottom: none;
    }
  }

  &-brand {
    font-variant-numeric: lining-nums;
    text-decoration: none;

    @include media-breakpoint-up(lg) {
      padding-block: 2rem;
    }

    &:not(:has(.qld-header-secondary-content)) {
      @include media-breakpoint-down(lg) {
        // prevent tabbing into empty link on smaller screens.
        display: none;
      }
    }
  }

  // qld-header-brand-image controls sizing and layout specific to the Brand lock up image.
  // See qld-header-logo for color and behaviour of the logo itself.
  &-brand-image {
    display: none;

    @include media-breakpoint-up(lg) {
      display: block;
    }

    img {
      margin: auto 0;
      display: block;
    }

    svg {
      vertical-align: text-bottom;
      pointer-events: none;
    }
  }

  &-secondary-content {
    display: inline-block;
    flex-wrap: wrap;
    align-items: baseline;
    text-wrap: balance;
    padding-block: 1rem;

    @include media-breakpoint-up(md) {
      padding-block: 1.5rem;
    }

    @include media-breakpoint-up(lg) {
      display: flex;
      padding-block: 0;
      flex-direction: column;
      flex-wrap: nowrap;
      justify-content: center;
      border-left: 2px solid var(--#{$prefix}header-brand-divider-color);
      margin-left: 1.5rem;
      padding-left: 1.5rem;
    }
  }

  &-secondary-image {
    height: 2.5rem;

    @include media-breakpoint-up(md) {
      height: 3.5rem;
    }
  }

  &-site-title {
    font-size: 1rem;
    font-weight: 700;
    line-height: 1.25;
    // margin: 0 1ch 0 0;
    padding: 0;
    font-family: $font-family-sitename;
    color: var(--#{$prefix}site-title-color);
    text-decoration: underline solid 0px transparent;
    transition-property: text-decoration, color;
    transition-duration: animation.$duration-fast;
    transition-timing-function: animation.$timing-function;

    a:hover & {
      color: var(--#{$prefix}site-title-color);
      text-decoration-thickness: var(--qld-link-underline-thickness-hover);
      text-decoration-color: currentColor !important;
    }

    @include media-breakpoint-up(md) {
      font-size: 1.25rem;
      line-height: 1.2;
    }
  }

  &-subline {
    color: var(--#{$prefix}header-subline-color);
    font-size: 0.875rem;
    line-height: 1.14;
    max-width: 80ch;
    text-decoration: underline solid 0px transparent;
    transition-property: text-decoration, color;
    transition-duration: animation.$duration-fast;
    transition-timing-function: animation.$timing-function;

    a:hover & {
      color: var(--#{$prefix}header-subline-color);
      text-decoration-thickness: var(--qld-link-underline-thickness-hover);
      text-decoration-color: currentColor !important;
    }

    @include media-breakpoint-up(md) {
      font-size: 1rem;
      line-height: 1.25;
    }
  }

  &-site-search {
    display: none;
    z-index: 1;
    position: absolute;
    left: 0;
    right: 0;
    top: 0.4rem;
    padding: 1rem var(--qld-container-padding-x);
    background-color: var(--#{$prefix}header-color-bg);

    &.is-open {
      display: block;
    }

    @include media-breakpoint-up(lg) {
      z-index: unset;
      display: block;
      position: static;
      padding: 0;
      background-color: transparent;
    }
  }
}

